@@ -2657,6 +2657,11 @@ all \- all of the above.
 .RE
 .RE
 .TP
+.BI "                                         :tabname"
+.TP
+.BI ":tabname [name]"
+set, update or reset (when no argument is provided) name of the current tab.
+.TP
 .BI "                                         :tabnew"
 .TP
 .BI ":tabnew [name]"
