@@ -363,6 +363,7 @@ siblprev
 histnext
 histprev
 tabnew
+tabname
 
 " "hi" should be highlighted as :command and its argument as highlight group
 hi CurrLine
